# rust-rocket-workspace

./: .dockerignore  Dockerfile  README.md
web/: Cargo.toml
web/public/: foo.css
web/src/: main.rs
web/src/app/: settings.rs
web/src/http/: wrappers.rs
