[package]
name = "web"
version = "0.1.0"
authors = ["Louis Capitanchik <contact@louiscap.co>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
failure = "0.1.5"
uuid = "0.7.2"
config = "0.9.2"

[dependencies.rocket_contrib]
version = "0.4.0"
features = ["json", "handlebars_templates", "serve", "uuid"]